fix:follow API swag
