# docs/swagger.yaml
@@ -86,6 +86,13 @@ definitions:
       user_id:
         type: string
     type: object
+  api.CreateFollowRequestBody:
+    properties:
+      to_user_id:
+        type: string
+    required:
+    - to_user_id
+    type: object
   api.DeleteResponse:
     properties:
       result:
@@ -163,6 +170,15 @@ definitions:
       username:
         type: string
     type: object
+  db.Follows:
+    properties:
+      create_at:
+        type: string
+      from_user_id:
+        type: string
+      to_user_id:
+        type: string
+    type: object
   db.Frameworks:
     properties:
       framework:
@@ -193,6 +209,75 @@ info:
   title: Hack Hack Backend API
   version: "1.0"
 paths:
+  /acccounts/{from_user_id}/follow:
+    delete:
+      description: Remove follow
+      parameters:
+      - description: remove Follow Request path
+        in: path
+        name: from_user_id
+        required: true
+        type: string
+      - description: remove Follow Request Body
+        in: body
+        name: RemoveFollowRequestQueries
+        required: true
+        schema:
+          $ref: '#/definitions/api.CreateFollowRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: succsss response
+          schema:
+            items:
+              $ref: '#/definitions/db.Follows'
+            type: array
+        "400":
+          description: error response
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: error response
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Remove follow
+      tags:
+      - AccountsFollow
+    post:
+      description: Create Follow
+      parameters:
+      - description: create Follow Request path
+        in: path
+        name: from_user_id
+        required: true
+        type: string
+      - description: create Follow Request Body
+        in: body
+        name: CreateFollowRequestBody
+        required: true
+        schema:
+          $ref: '#/definitions/api.CreateFollowRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: succsss response
+          schema:
+            items:
+              $ref: '#/definitions/db.Follows'
+            type: array
+        "400":
+          description: error response
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: error response
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Create Follow
+      tags:
+      - AccountsFollow
   /accounts:
     post:
       description: Create new account
